--- a/style.css
+++ b/style.css
@@ -6,16 +6,39 @@
 }
 
 :root {
-  --primary-color: #092D38;
+  --table-head: #092d38;
+  --tbody-primary: #06181c;
+  --tbody-secondary: #06161b80;
+  --scroll-background: #292a2b56;
+  --scroll-color: #3f404156;
+  --scroll-color-hover: #58595a56;
   --primary-size: 2rem;
-  --text-color: #E1E1E6;
-  --border-primary: 1px solid #4A808C;
+  --text-color: #e1e1e6;
+  --primary-border: 1px solid #4a808c;
   font-size: 62%;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--scroll-background);
+  border-radius: 0 0 8px 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--scroll-color);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--scroll-color-hover);
 }
 
 body {
   background: black;
-  color: white;
+  color: var(--text-color);
 }
 
 #app {
@@ -23,58 +46,6 @@ body {
   max-width: 1120px;
   margin: 0 auto;
   text-align: center;
-  
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  gap: 0.8rem;
-}
-
-.search input {
-  height: 4.8rem;
-  width: 43.0rem;
-  border: none;
-  border-radius: 0.5rem;
-  padding: 0 .8rem;
-  gap: 0.8rem;
-  background: #06181C;
-  color: #7C7C8A;
-  gap: 7rem;
-}
-
-.search button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 0.8rem;
-  height: 4.8rem;
-  width: 17rem;
-  background: #065E7C;
-  color: white;
-  text-transform: uppercase;
-  border-radius: 0.5rem;
-}
-
-.search button:hover {
-  transition: .2s;
-  background-color: #FFFFFF;
-  color: #065E7C;
-}
-
-
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0,0,0,0);
-  white-space: nowrap;
-  border-width: 0;
 }
 
 header {
@@ -85,21 +56,59 @@ header {
   gap: 29.5rem;
 }
 
+.search {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
 
-.table_wrapper {
-  border: var(--border-primary);
-  border-radius: 1.2rem;
+.search input {
+  height: 4.8rem;
+  width: 43rem;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0 0.8rem;
+  gap: 0.8rem;
+  background: #06181c;
+  color: #7c7c8a;
+  gap: 7rem;
+}
+
+.search button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+  height: 4.8rem;
+  width: 17rem;
+  background: #065e7c;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 0.5rem;
+}
+
+.search button:hover {
+  transition: 0.2s;
+  background-color: #ffffff;
+  color: #065e7c;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
   overflow: hidden;
-  margin-bottom: 11rem;
-  height: 688px;
-  overflow-y: scroll;
-  display: block;
-  table-layout: fixed;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
+  table-layout: fixed;
 }
 
 table * {
@@ -107,62 +116,84 @@ table * {
   color: var(--text-color);
 }
 
-table th {
-background: var(--primary-color);
-text-align: left;
-font-weight: bold;
-padding: 1.5rem;
+table thead tr {
+  display: flex;
+  justify-content: space-around;
+  background: var(--table-head);
+  border-radius: 12px 12px 0 0;
 }
 
+table thead th {
+  text-align: left;
+  font-weight: bold;
+  padding: 1.5rem;
+}
+
+table tbody {
+  display: block;
+  width: 100%;
+  overflow: auto;
+  height: 300px;
+  border-radius: 0 0 12px 12px;
+}
+
+table tbody tr {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 30px;
+  align-items: center;
+}
 
 /* par */
-table tr:nth-child(even) {
-  background: #06181C;
-  /* border: var(--border-primary); */
-  border-top: var(--border-primary);
-  border-bottom: var(--border-primary);
+table tbody tr:nth-child(even) {
+  background: var(--tbody-primary);
 }
 
 /* ímpar */
-table tr:nth-child(odd) {
-  background: rgb(6, 22, 27, 50%);
-  
+table tbody tr:nth-child(odd) {
+  background: var(--tbody-secondary);
 }
 
-table td {
+table tbody td {
+  width: 180px;
   padding: 1.5rem;
+  text-align: center;
+}
+
+table tbody td:first-child {
   text-align: left;
 }
 
-td.user {
-  display:flex;
+table tbody td.user {
+  display: flex;
   align-items: center;
   gap: 1rem;
 }
 
-td.user a {
+table tbody td.user a {
   text-decoration: none;
 }
 
-td.user a p {
+table tbody td.user a p {
   font-weight: bold;
 }
 
-td.user img {
+table tbody td.user img {
   width: 5rem;
   height: 5rem;
   object-fit: cover;
   border-radius: 50%;
 }
 
-td .remove {
+table tbody td button.remove {
   background: none;
   border: none;
-  color: #F75A68;
+  color: #f75a68;
   cursor: pointer;
   font-weight: bold;
 }
 
-td .remove:hover {
+table tbody td .remove:hover {
   color: #f8838d;
 }
